--- a/historia.html
+++ b/historia.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="icon" href="./assets/hockey.svg">
+    <title>Hockey - História</title>
   </head>
   <body>
-    <header></header>
+    <script src="./script/navbar.js" id="navScript"></script>
     <main></main>
-    <footer></footer>
+    <script src="./script/footer.js" id="footerScript"></script>
   </body>
 </html>
