Navbar move with scroll

--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="icon" href="./assets/hockey.svg">
     <title>Hockey - Quiz</title>
@@ -12,7 +12,7 @@
     <script src="./script/navbar.js" id="navScript"></script>
     <main class="mainDiv">
       <h1 class="headerText">Quiz de Hóquei</h1>
-      <div class="question" id="q1" id="q1">
+      <div class="question" id="q1">
         <label>O disco "puck" utilizado no hoquei é feito de qual material?</label> <br>
         <input type="radio" name="radio1" value="1" checked> Mármore carrara <br>
         <input type="radio" name="radio1" value="2"> Borracha vulcanizada <br>
@@ -64,7 +64,7 @@
       </div>
       <button onclick="submitClicked()" class="button">Enviar</button>
       <div id="resultDiv" class="">
-        <h2 id="result" class="quiz"></h2>
+        <h2 id="result" class="quiz headerText"> </h2>
       </div>
     </main>
     <script src="./script/footer.js" id="footerScript"></script>
