--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <script src="./script/navbar.js" id="navScript"></script>
-    <main></main>
+    <main class="mainDiv"></main>
     <script src="./script/footer.js" id="footerScript"></script>
   </body>
 </html>
