--- a/curiosidades.html
+++ b/curiosidades.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="icon" href="./assets/hockey.svg">
-    <title>Hockey - Curiosidades</title>
+    <title>Hóquei - Curiosidades</title>
   </head>
   <body>
     <script src="./script/navbar.js" id="navScript"></script>
-    <main class="mainDiv"></main>
+    <img src="./assets/curio.jpg" class="wideImage" alt="jogadores brigando">
+    <main class="mainDiv" style="padding-top: 0;">
+      <section>
+        <h1 class="headerText" id="curio">Curiosidades do Hóquei</h1>
+        <article class="articleText">
+          <h2 class="headerText" id="disco">Disco Puck</h2>
+          Os primeiros jogos utilizavam esterco de vaca congelado como disco, isso remonta às raízes culturais do jogo. Por razões compreensíveis, os atletas modernos preferem o disco de borracha vulcanizada que todos conhecemos hoje, que são mantidos congelados até o início do jogo, por serem feitos de borracha eles ficam flexíveis quando em temperatura ambiente, dificultando o controle dos jogadores.
+        </article>
+        <article class="articleText">
+          <h2 class="headerText" id="regras">Regras do Hóquei</h2>
+          O jogo é dado a partir de doze jogadores (seis em cada time) que deslizam com patins sobre uma superfície de gelo. Cada equipe disputa a posse de um pequeno disco de metal (puck), para finalmente acertá-lo no gol. Assistir a um jogo de hóquei sobre o gelo é uma experiência interessantíssima. Isso porque é um jogo em que os atletas se deslocam muito rapidamente e suas tacadas no “puck” chegam a atingir 160 quilômetros por hora. Além disso, a possibilidade de substituir os atletas infinitas vezes, também contribui para a sensação de rapidez que o jogo proporciona. <br>
+          O tempo total da partida é de 60 minutos, divididos em três tempos de vinte minutos. Caso haja empate após o período regulamentar de partida, é acrescido um período de jogo de cinco minutos, em que o time que pontuar primeiro, torna-se vencedor.
+          <div class="question enough" style="margin-top: 1.6rem; margin-bottom: 0%;">
+              Fãs da audiencia podem ser goleiros, em caso de acidente em que o goleiro oficial esteja incapacitado de vencer, um membro da audiência pode se candidatar como goleiro de emergência, como ocorrido em 2020, no jogo do Carolina Hurricanes.
+          </div>
+        </article>
+
+        <article class="articleText">
+          <h2 class="headerText" id="campeonatos">Campeonatos</h2>
+          O maior campeonato da modalidade é a NHL, e os maiores campeões da liga são do próprio Canadá, onde estão os principais times da liga. São eles: Winnipeg Jets, Calgary Flames, Edmonton Oilers, Vancouver Canucks, Montreal Canadiens, Ottawa Senators e Toronto Maple Leafs. Montreal Canadiens leva vantagem, com 23 títulos em 34 aparições. Em seguida, vem o Toronto Maple Leafs, com 13 títulos em 21 aparições.<br>
+          O disco mais rápido a ser lançado foi pelo jogador da KHL, Alexander Ryazantsev, e atingiu cerca de 183 km/h.
+          <a href="https://www.nhl.com/" target="second" class="linkButton">Site da NHL</a> 
+        </article>
+        <article class="articleText">
+          <h2 class="headerText" id="perigos">Perigos</h2>
+          Como se trata de um esporte muito ágil e com bastante embate corporal entre as equipes, os atletas precisam se proteger com vestimentas apropriadas. No início do esporte, as vestes eram apenas uma blusa de lã com gola rolê, botas com lâminas (para permitir o deslize sobre a superfície congelada), e tacos pesados de madeira. Essas vestes também passaram por um processo evolutivo bastante importante: atualmente, utilizam-se materiais de proteção ao corpo de altíssima tecnologia, para impedir pancadas graves.
+        </article>
+      </section>
+
+    </main>
     <script src="./script/footer.js" id="footerScript"></script>
   </body>
 </html>
