--- a/historia.html
+++ b/historia.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="icon" href="./assets/hockey.svg">
-    <title>Hockey - História</title>
+    <title>Hóquei - História</title>
   </head>
   <body>
     <script src="./script/navbar.js" id="navScript"></script>
+    <img src="./assets/histo.jpg" class="wideImage" alt="jogadores de hoquei">
     <main class="mainDiv"></main>
     <script src="./script/footer.js" id="footerScript"></script>
   </body>
