--- a/curiosidades.html
+++ b/curiosidades.html
@@ -31,8 +31,44 @@
           <h2 class="headerText" id="campeonatos">Campeonatos</h2>
           O maior campeonato da modalidade é a NHL, e os maiores campeões da liga são do próprio Canadá, onde estão os principais times da liga. São eles: Winnipeg Jets, Calgary Flames, Edmonton Oilers, Vancouver Canucks, Montreal Canadiens, Ottawa Senators e Toronto Maple Leafs. Montreal Canadiens leva vantagem, com 23 títulos em 34 aparições. Em seguida, vem o Toronto Maple Leafs, com 13 títulos em 21 aparições.<br>
           O disco mais rápido a ser lançado foi pelo jogador da KHL, Alexander Ryazantsev, e atingiu cerca de 183 km/h.
-          <a href="https://www.nhl.com/" target="second" class="linkButton">Site da NHL</a> 
         </article>
+        <div>
+          <table class="table">
+            <tr>
+              <th colspan="3">Maiores campeonatos de Hóquei:</th>
+            </tr>
+            <tr>
+              <th>Liga</th>
+              <th>País</th>
+              <th>Participantes</th>
+            </tr>
+            <tr>
+              <td><a href="https://www.nhl.com/" target="second" class="linkButton">National Hockey League (NHL)</a></td>
+              <td>🇺🇸 EUA<br>🇨🇦 Canadá</td>
+              <td>17,406</td>
+            </tr>
+            <tr>
+              <td><a href="https://www.sihf.ch/de/national-league/" target="second" class="linkButton">National League (NL)</a></td>
+              <td>🇨🇭 Suíça</td>
+              <td>6,949</td>
+            </tr>
+            <tr>
+              <td><a href="https://en.khl.ru/" target="second" class="linkButton">Kontinental Hockey League (KHL)</a></td>
+              <td>🇷🇺 Rússia<br>🇧🇾 Belarus<br>🇨🇳 China<br>🇰🇿 Cazaquistão</td>
+              <td>6,397</td>
+            </tr>
+            <tr>
+              <td><a href="https://www.eishockey.net/de/" target="second" class="linkButton">Deutsche Eishockey Liga (DEL)</a></td>
+              <td>🇩🇪 Alemanha</td>
+              <td>6,215</td>
+            </tr>
+            <tr>
+              <td><a href="https://www.shl.se/shl-in-english" target="second" class="linkButton">Swedish Hockey League (SHL)</a></td>
+              <td>🇸🇪 Suécia</td>
+              <td>5,936</td>
+            </tr>
+          </table>
+        </div>
         <article class="articleText">
           <h2 class="headerText" id="perigos">Perigos</h2>
           Como se trata de um esporte muito ágil e com bastante embate corporal entre as equipes, os atletas precisam se proteger com vestimentas apropriadas. No início do esporte, as vestes eram apenas uma blusa de lã com gola rolê, botas com lâminas (para permitir o deslize sobre a superfície congelada), e tacos pesados de madeira. Essas vestes também passaram por um processo evolutivo bastante importante: atualmente, utilizam-se materiais de proteção ao corpo de altíssima tecnologia, para impedir pancadas graves.
