--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   </head>
   <body>
     <script src="./script/navbar.js" id="navScript"></script>
-    <main class="mainDiv"></main>
+    <main class="mainDiv">
+      <section>
+        <h1 class="headerText">Por que Hóquei?</h1>
+        <article class="articleText">
+        </article>
+      </section>
+    </main>
     <script src="./script/footer.js" id="footerScript"></script>
   </body>
 </html>
