--- a/curiosidades.html
+++ b/curiosidades.html
@@ -14,6 +14,21 @@
     <main class="mainDiv" style="padding-top: 0;">
       <section>
         <h1 class="headerText" id="curio">Curiosidades do Hóquei</h1>
+        <aside class="sideNav question start">
+          <h2>Índice</h2>
+          <div>
+            <button class="linkButton" onclick="smoothScroll('disco')">Disco</button>
+          </div>
+          <div>
+            <button class="linkButton" onclick="smoothScroll('regras')">Regras</button>
+          </div>
+          <div>
+            <button class="linkButton" onclick="smoothScroll('campeonatos')">Campeonatos</button>
+          </div>
+          <div>
+            <button class="linkButton" onclick="smoothScroll('perigos')">Perigos</button>
+          </div>
+        </aside>
         <article class="articleText">
           <h2 class="headerText" id="disco">Disco Puck</h2>
           Os primeiros jogos utilizavam esterco de vaca congelado como disco, isso remonta às raízes culturais do jogo. Por razões compreensíveis, os atletas modernos preferem o disco de borracha vulcanizada que todos conhecemos hoje, que são mantidos congelados até o início do jogo, por serem feitos de borracha eles ficam flexíveis quando em temperatura ambiente, dificultando o controle dos jogadores.
@@ -74,8 +89,8 @@
           Como se trata de um esporte muito ágil e com bastante embate corporal entre as equipes, os atletas precisam se proteger com vestimentas apropriadas. No início do esporte, as vestes eram apenas uma blusa de lã com gola rolê, botas com lâminas (para permitir o deslize sobre a superfície congelada), e tacos pesados de madeira. Essas vestes também passaram por um processo evolutivo bastante importante: atualmente, utilizam-se materiais de proteção ao corpo de altíssima tecnologia, para impedir pancadas graves.
         </article>
       </section>
-
     </main>
+    <script src="./script/scroll.js"></script>
     <script src="./script/footer.js" id="footerScript"></script>
   </body>
 </html>
