acabamos de vez

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <img src="./assets/index.jpg" class="wideImage" alt="jogadores de hoquei">
     <main class="mainDiv" style="padding-top: 0;">
       <section>
-        <h1 class="headerText">Objetivos</h1>
+        <h1 class="headerText">Início</h1>
         <article class="articleText">
+          <h2 class="headerText">Objetivos</h2>
           Nosso objetivo com este trabalho foi aprender sobre codificação de site HTML e CSS e demonstrar tais aprendizados fazendo um site repleto de funcionalidades encontradas em diversos sites profissionais utilizados por todo tipo de empresas, organizações e frameworks como CNN, Wikipedia, Bootstrap e outros. 
         </article>
-      </section>
-      <section>
-        <h1 class="headerText">Por que Hóquei?</h1>
         <article class="articleText">
+          <h2 class="headerText">Por que Hóquei?</h2>
           O Hóquei é um esporte pouco conhecido no Brasil, o que mostrou-se uma oportunidade interessante de aprendizado sobre a história, regras e acontecimentos desse esporte, permitindo assim que pudéssemos mostrar algo potencialmente novo.
         </article>
       </section>
