--- a/historia.html
+++ b/historia.html
@@ -44,6 +44,7 @@
           <img src="./assets/Olimpiadas.JPG" alt="abertura olimpiadas inverno 2022" class="bodyImage">
         </article>
       </section>
+      <script src="./script/compare.js"></script>
     </main>
     <script src="./script/scroll.js"></script>
     <script src="./script/footer.js" id="footerScript"></script>
