--- a/curiosidades.html
+++ b/curiosidades.html
@@ -88,6 +88,7 @@
           <h2 class="headerText" id="perigos">Perigos</h2>
           Como se trata de um esporte muito ágil e com bastante embate corporal entre as equipes, os atletas precisam se proteger com vestimentas apropriadas. No início do esporte, as vestes eram apenas uma blusa de lã com gola rolê, botas com lâminas (para permitir o deslize sobre a superfície congelada), e tacos pesados de madeira. Essas vestes também passaram por um processo evolutivo bastante importante: atualmente, utilizam-se materiais de proteção ao corpo de altíssima tecnologia, para impedir pancadas graves.
         </article>
+        <script src="./script/carrousel.js"></script>
       </section>
     </main>
     <script src="./script/scroll.js"></script>
