--- a/historia.html
+++ b/historia.html
@@ -31,7 +31,7 @@
           <h2 class="headerText" id="comeco">Começo do Hóquei no gelo moderno.</h2>
             O hóquei sobre o gelo foi criado no Canadá em 1834, como um derivado do hóquei em campo. Os primeiros jogos, de caráter informal, foram realizados por soldados britânicos em Kingston, Ontário, e Halifax, Nova Escócia, sobre espelhos de água congelados, como rios e lagos, durante o rigoroso Inverno canadense. Como um derivado direto do hóquei de campo, tacos curvados e bolas de borracha eram os principais equipamentos de jogo. 
           <img src="./assets/McGill.jpg" alt="pessoas jogando hóquei 1822" class="bodyImage">
-            Em 1875, o primeiro jogo em recinto coberto foi organizado em Montréal, e em 1877, sete estudantes da Universidade McGill criaram as primeiras regras para o esporte. A bola de borracha foi substituída por um disco de madeira, e cada equipe possuiria nove jogadores (mais os reservas). O esporte rapidamente espalhou-se pelo país. Em 1883, esteve presente no festival de Inverno de Montréal, tendo participado dos festivais de Inverno da cidade pelos próximos anos. Ao longo da década de 1880, muitas equipes de hóquei foram criados no país. Em 1898, o então Governador Geral do Canadá, Lord Stanley of Preston (cujos filhos eram fãs de hóquei), compareceu ao festival de Inverno, e ficou muito impressionado com o esporte, tanto que achou que deveria existir um troféu para a melhor equipe de hóquei, e Stanley doou um troféu de prata, que seria dado todo os anos à equipa vencedora do Canadá. Actualmente, a Stanley Cup é dada à equipe vencedora da NHL. Por volta de 1895, os primeiros jogos de hóquei sobre o gelo nos Estados Unidos foram organizados. 
+            Em 1875, o primeiro jogo em recinto coberto foi organizado em Montréal, e em 1877, sete estudantes da Universidade McGill criaram as primeiras regras para o esporte. A bola de borracha foi substituída por um disco de madeira, e cada equipe possuiria nove jogadores (mais os reservas). O esporte rapidamente espalhou-se pelo país. Em 1883, esteve presente no festival de Inverno de Montréal, tendo participado dos festivais de Inverno da cidade pelos próximos anos. Ao longo da década de 1880, muitas equipes de hóquei foram criados no país. Em 1898, o então Governador Geral do Canadá, Lord Stanley of Preston (cujos filhos eram fãs de hóquei), compareceu ao festival de Inverno, e ficou muito impressionado com o esporte, tanto que achou que deveria existir um troféu para a melhor equipe de hóquei, e Stanley doou um troféu de prata, que seria dado todo os anos à equipa vencedora do Canadá. Actualmente, a Stanley Cup é dada à equipe vencedora da NHL. Por volta de 1895, os primeiros jogos de hóquei sobre o gelo nos Estados Unidos foram organizados.
         </article>
         <article class="articleText">
           <h2 class="headerText" id="origens">Origens</h2>
@@ -45,6 +45,7 @@
         </article>
       </section>
       <script src="./script/compare.js"></script>
+      <script src="./script/eventos.js"></script>
     </main>
     <script src="./script/scroll.js"></script>
     <script src="./script/footer.js" id="footerScript"></script>
