Alterar cores e fonte

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -12,6 +12,7 @@
     <script src="./script/navbar.js" id="navScript"></script>
     <img src="./assets/curio.jpg" class="wideImage" alt="jogadores brigando">
     <main class="mainDiv" style="padding-top: 0;">
+      <script src="./script/cores.js"></script>
       <section>
         <h1 class="headerText" id="curio">Curiosidades do Hóquei</h1>
         <aside class="sideNav question start">
