Imagem no index e calendário

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
           <h2 class="headerText">Objetivos</h2>
           Nosso objetivo com este trabalho foi aprender sobre codificação de site HTML e CSS e demonstrar tais aprendizados fazendo um site repleto de funcionalidades encontradas em diversos sites profissionais utilizados por todo tipo de empresas, organizações e frameworks como CNN, Wikipedia, Bootstrap e outros. 
         </article>
+        <script src="./script/calendario.js"></script>
         <article class="articleText">
           <h2 class="headerText">Por que Hóquei?</h2>
           O Hóquei é um esporte pouco conhecido no Brasil, o que mostrou-se uma oportunidade interessante de aprendizado sobre a história, regras e acontecimentos desse esporte, permitindo assim que pudéssemos mostrar algo potencialmente novo.
         </article>
       </section>
+      <script src="./script/imagem.js"></script>
     </main>
     <script src="./script/footer.js" id="footerScript"></script>
   </body>
